修改加密类